worked on the vignettes and fixed a few bugs
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@150 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/vignettes/empir.bib
+++ b/pkg/gmm4/vignettes/empir.bib
@@ -614,10 +614,21 @@ OPTannote = {}
   PAGES={300-325},
   YEAR={1994}
 }
- 
+
+@article{wu05,
+  NUMBER = {2},
+  AUTHOR = {Wu, C.},
+  TITLE = {Algorithms and {R} codes for the pseudo empirical likelihood
+                  method in survey sampling},
+  JOURNAL = {Survey Methodology},
+  VOLUME = {31},
+  PAGES = {239},
+  YEAR = {2005}
+ }
+
  @Manual{gmm,
     title = {gmm: Generalized Method of Moments and Generalized Empirical Likelihood},
-    author = {Pierre Chausse},
+    author = {Pierre Chauss\'e},
     year = {2019},
     note = {R package version 1.6-3},
   }
