worked on the vignettes and added some features for GEL
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@152 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/vignettes/empir.bib
+++ b/pkg/gmm4/vignettes/empir.bib
@@ -183,6 +183,19 @@ publisher = {Academic Press},
 year = {1984},
 }
 
+@article{antoine-bonnal-renault07,
+  AUTHOR = {Antoine, B. and Bonnal, H. and Renault, E.},
+  TITLE = {On the Efficient Use of the Informational Content of
+                  Estimating Equations: Implied Probabilities and
+                  Euclidean Empirical Likelihood},
+  JOURNAL = {Journal of Econometrics},
+  VOLUME = {138},
+  PAGES = {461-487},
+  YEAR = {2007},
+  Number = {}
+ }
+
+
 @Book{gallant87,
 author = {Gallant, A. R.},
 title = {Nonlinear Statistical Models},
