--- a/pkg/gmm4/vignettes/gelS4.Rnw
+++ b/pkg/gmm4/vignettes/gelS4.Rnw
@@ -68,6 +68,54 @@ opts_chunk$set(size='footnotesize')
 \tableofcontents
 \newpage
 
+<<extract, echo=FALSE, message=FALSE, warning=FALSE>>=
+library(texreg)
+setMethod("extract", "gelfit", 
+          function(model, includeSpecTest=TRUE, 
+                   specTest=c("LR","LM","J"), include.nobs=TRUE, 
+                   include.obj.fcn=TRUE, ...)
+              {
+                  specTest <- match.arg(specTest)
+                  s <- summary(model, ...)
+                  wspecTest <- grep(specTest, rownames(s@specTest@test))
+                  spec <- modelDims(model@model)
+                  coefs <- s@coef
+                  names <- rownames(coefs)
+                  coef <- coefs[, 1]
+                  se <- coefs[, 2]
+                  pval <- coefs[, 4]
+                  n <- model@model@n
+                  gof <- numeric()
+                  gof.names <- character()
+                  gof.decimal <- logical()
+                  if (includeSpecTest) {
+                      if (spec$k == spec$q)
+                          {
+                              obj.fcn <- NA
+                              obj.pv <- NA
+                          } else {
+                              obj.fcn <- s@specTest@test[wspecTest,1]
+                              obj.pv <- s@specTest@test[wspecTest,3]
+                          }
+                      gof <- c(gof, obj.fcn, obj.pv)                      
+                      gof.names <- c(gof.names, 
+                                     paste(specTest,"-test Statistics", sep=""),
+                                     paste(specTest,"-test p-value", sep=""))
+                      gof.decimal <- c(gof.decimal, TRUE, TRUE)
+                  }
+                  if (include.nobs == TRUE) {
+                      gof <- c(gof, n)
+                      gof.names <- c(gof.names, "Num.\\ obs.")
+                      gof.decimal <- c(gof.decimal, FALSE)
+                  }
+                  tr <- createTexreg(coef.names = names, coef = coef, se = se, 
+                                     pvalues = pval, gof.names = gof.names, gof = gof, 
+                                     gof.decimal = gof.decimal)
+                  return(tr)
+              })
+@ 
+
+
 \section{A very brief review of the GEL method}
 We present how to use the package to estimate models by the
 Generalized Empirical Likelihood method (GEL) (see
@@ -624,16 +672,486 @@ This is the main estimation method. It returns an object of class
 In general, it works fine with the default arguments:
 
 <<warning=FALSE>>=
-modelFit(lin)
+fit <- modelFit(lin)
+@ 
+
+The following slots are available for the ``gelfit'' object:
+
+<<>>=
+showClass("gelfit")
+@ 
+
+\subsection{Methods for ``gelfit'' classes} \label{sec:gelmodels-gelfitm}
+
+\begin{itemize}
+  
+\item \textit{print}: It prints the model, $\hat{\theta}$ and
+  $\hat{\lambda}$. The arguments ``model'' and ``lambda'' can be set
+  to FALSE to avoid printing them.
+  
+<<>>=
+fit <- modelFit(lin, lControl=list(algo="Wu"))
+print(fit, lambda=FALSE, model=FALSE)
+@   
+
+\item \textit{residuals}: For ``linearGel'' and ``nonlinearGel'', it
+  returns the difference between the left hand side and right hand
+  side.
+  
+\item \textit{getImpProb}: It computes the vector of implied
+  probabilities $\hat{p}_i$'s. By default, they are defined as:
+  \[
+  \hat{p}_i = \frac{-\rho'(g_i(\hat{\theta}))/n}{\sum_{j=1}^n -\rho'(g_j(\hat{\theta}))/n}
+  \]
+  The options are
+  \begin{itemize}
+    \item posProb: This option is only considered for EEL type of
+      GEL. If set to TRUE, the method of
+      \citet{antoine-bonnal-renault07} is used to compute the 
+      probabilities:
+\[      
+\tilde{p}_i = \frac{\hat{p}_i + \varepsilon/n}{1+\varepsilon},
+\]
+where $\varepsilon=-n\min(\min_i(\hat{p}_i), 0)$, and
+$\hat{p}_i=-\rho'(g_i(\hat{\theta}))/n$, which is the unormalized
+version of the above definition. It is then normalized to sum to
+1. The method is only needed when we want to compute moments based on
+them. It is therefore set to FALSE by default.
+\item normalize: If TRUE, the default, the above normalized version is
+  returned. If FALSE, it returns $-\rho'(g_i(\hat{\theta}))/n$. 
+    \end{itemize}
+
+The method returns a list with pt, the vector $\{\hat{p}_i\}$,
+convMom = $\sum_{i=1}^n \hat{p}_ig_i(\hat{\theta})$, and
+convProb = $|(\sum_{i=1}^n \hat{p}_i)-1|$. convMom is important,
+because it indicates if the estimation went well. It should be a
+vector close to zero.
+
+<<>>=
+pt <- getImpProb(fit)
+pt$convMom
+@ 
+  
+\item \textit{vcov}: It returns the covariance matrices of
+  $\hat{\theta}$ and $\hat{\lambda}$ in a list. The returned
+  covariance matrix for $\hat{\theta}$ is:
+
+\[
+\hat{\Sigma} = \frac{1}{n}\left[\hat{G}'\hat{\Omega}^{-1} \hat{G} \right]^{-1}
+\]
+  
+when the ``vcov'' component of the object is not ``HAC'', with
+
+\[
+\hat{G} = \frac{1}{n}\sum_{i=1}^n \frac{dg_i(\hat{\theta})}{d\theta},
+\]
+
+and
+
+\[
+\hat{\Omega} = \frac{1}{n}\sum_{i=1}^n g_i(\hat{\theta})
+  g_i(\hat{\theta})'.
+\]
+
+For HAC specification, the covariance matrix is:
+
+\[
+\hat{\Sigma}_w = \frac{1}{n}\left[\hat{G}_w'\hat{\Omega}_w^{-1} \hat{G}_w\right]^{-1},
+\]
+
+with
+
+\[
+\hat{G}_w = \frac{1}{nk_1}\sum_{i=1}^n \frac{dg^w_i(\hat{\theta})}{d\theta}
+\]
+
+and
+
+\[
+\hat{\Omega}_w = \frac{b}{nk_2}\sum_{i=1}^n g^w_i(\hat{\theta})
+  g_i^w(\hat{\theta})',
+\]
+
+where $b$ is the bandwidth and the scalars $k_1$ and $k_2$ are
+determined by the kernel. The values of $\{k_1,k_2\}$ are $\{2,2\}$
+when the smoothing is based on the Truncated kernel, which implies
+Bartlett for the HAC estimator, and $\{1,2/3\}$ when the smoothing is
+based on the Bartlett kernel, which implies Parzen for the HAC
+estimator.
+
+Using the above definitions, the returned covariance matrix for
+$\hat{\lambda}$ is
+
+\[
+\widehat{Var(\hat{\lambda})} = \frac{1}{n}\left[\hat{\Omega}^{-1}  -
+\hat{\Omega}^{-1} \hat{G} \hat{\Sigma} \hat{G}'\hat{\Omega}^{-1} \right]
+\]
+
+for non-smoothed moments, and 
+
+\[
+\widehat{Var(\hat{\lambda})}_w = \frac{b^2}{n}\left[\hat{\Omega}_w^{-1}  -
+\hat{\Omega}_w^{-1} \hat{G}_w \hat{\Sigma}_w \hat{G}_w'\hat{\Omega}_w^{-1} \right]
+\]
+
+for smoothed moments. The method has two additional arguments. The
+first is ``withImpProb'', which is FALSE by default. if set to TRUE,
+all moment estimations in the form $\sum_{i=1}^n[]_i/n$ are replaced
+by $\sum_{i=1}^n \hat{p}_i[]_i$. The second argument is tol, which is
+a tolerance level for too small diagonal elements of the covariance
+matrix of $\hat{\lambda}$. When some moment conditions are not
+binding, the estimated variance of the associated Lagrange multiplier
+may be too small or even negative, which is a numerical problem. To
+avoid negative values, tol is the minimum value the diagonal elements
+can take.
+
+\item \textit{summary}: It returns an object of class
+  ``summaryGel''. It returns the usual tables in estimation
+  methods. The only argument is ... which is passed to the
+  \textit(vcov) method.
+  
+<<>>=
+summary(fit)
+@   
+
+\item{specTest} It returns the likelihood ratio (LR), Lagrange
+  multiplier (LM) and J test, for the hypothesis
+  $H_0:\E(g(\theta))=0$. The signature is ("gelfit", "missing"), so
+  the second argument, which, is not used. The argument type is set to
+  "ALL" by default, which means that the three test are
+  returned. Alternatively we can specify a single test. It returns an
+  object of class ``specTest'' which possesses a \textit{print}
+  method.
+  
+<<>>=
+specTest(fit)
+@   
+
+\item \textit{confint}: It returnd confidence itervals for $\theta$ or
+  $\lambda$ By default, a simple Wald type interval is
+  constructed. The parm argument allows to select just a few
+  parameters. By default, it is done for all.
+  
+<<>>=
+confint(fit, parm=1:2, level=0.90)
+confint(fit, level=0.90, lambda=TRUE)
+@ 
+
+The ``vcov'' argument is used to provide the method with another
+covariance matrix. The ... is passed to the \textit{vcov} method.
+
+Confidence interval can also be semi-parametric, by inverting any of
+the specification test. To undertand how it is constructed, let
+us define $\theta_{-i}$ as the vector $\theta$ without $\theta_i$, and
+$\tilde{\theta}_{-i}(\theta_i)$ its estimate for a given
+$\theta_i$. Let $S(\theta_i, \theta_{-i})$ be one of the specification
+test evaluated at $\{\theta_i, \theta_{-i}\}$. Under the null that
+$\theta_i$ is the true value, 
+
+\[
+T(\theta_i) = S(\theta_i, \tilde{\theta}_{-i}(\theta_i))-S(\hat{\theta_i},\hat{\theta}_{-i})
+\conD \chi^2_1
+\]
+
+The following $(1-\alpha)$ confidence interval for $\theta_i$ is therefore 
+asymptotically valid (given some regularity conditions):
+
+\[
+\{\theta_i | T(\theta_i) \leq C_{1-\alpha}\}
+\]
+
+where $C_{1-\alpha}$ is the $(1-\alpha)$ quantile of the $\chi^2_1$
+distribution. To get $\tilde{\theta}_{-i}$, we need to estimate a
+restricted model for each $\theta_i$ and search for
+$T(\theta_i)=C_{1-\alpha}$. This is done by setting type "invLR",
+"invLM", or "invJ". A function that returns $[T(\theta_i)-C_{i-\alpha}]$
+is passed to the uniroot() function using intervals on both sides of
+$\hat{\theta}_i$. The argument ``fact'' is used to control the
+wideness of the interval passed to uniroot(). By default, the two
+intervals are (one for the left value and one for the right value of
+the confidence interval) $[\hat{\theta}_i-3s_i, \hat{\theta}_i]$ and
+$[\hat{\theta}_i, \hat{\theta}_i+3s_i]$, where $s_i$ is the standard
+error of $\hat{\theta}_i$. If the method fails, it is possible to
+adjust the intervals with ``fact''.
+
+<<>>=
+confint(fit, 1:2, type="invLR", level=0.90)
+@ 
+
+A common application in introductory course on EL, is to compute EL
+confidence interval for a mean. Here, it is done by first creating a
+model with only one intercept and an intercept as instrument:
+
+<<>>=
+muModel <- gelModel(x1~1, ~1, gelType="EL", data=simData)
+@ 
+
+We then fit the model:
+
+<<>>=
+muFit <- modelFit(muModel, tControl=list(method="Brent", lower=-10, upper=10),
+                  lControl=list(algo="Wu"))
+muFit@theta
+@ 
+
+The solution is just the sample mean:
+
+<<>>=
+mean(simData$x1)
+@ 
+
+We can then compute the EL confidence interval:
+
+<<>>=
+confint(muFit, type="invLR")
+@ 
+
+\item \textit{update}: The method is used to re-estimate a model with
+  different specifications, keeping all the others equal. Suppose we
+  start with the estimation using the \cite{wu05} algorithm:
+  
+<<>>=
+fit <- modelFit(lin, lControl=list(algo="Wu"))
+fit@theta
+@   
+
+We want to re-estimate the model with the same algorithm for $\lambda$
+but a different one for $\theta$:
+
+<<>>=
+fit2 <- update(fit, coefSlv="nlminb")
+fit2@theta
+@ 
+
+We can also change the type of GEL (here we reset the lControl because
+"Wu" is only for EL):
+
+<<>>=
+fit3 <- update(fit2, gelType="ET", lControl=list())
+fit3@theta
+@ 
+
+It is also possible to pass a new model to \textit{update}. This is
+particularly useful to estimate a restricted model with the same
+numerical methods. This is used by \textit{confint} to compute the
+interval by the inverse of the specification test. 
+
+<<>>=
+rlin <- restModel(fit3@model, "x1=1")
+update(fit3, newModel=rlin)
+@ 
+
+Here, fit3 is an ET estimation. If we restrict the model lin, which is
+EL, the \textit{update} will also use EL. That's why
+\textit{restModel} is applied to the model in fit3.
+\end{itemize}
+
+\section{The \textit{evalModel} Method} \label{sec:gelmodels-evalmodel}
+
+This method create a ``gelfit'' object without estimation. It is
+possible to simply fix $\lambda$ and $\theta$:
+
+<<>>=
+print(evalModel(lin, theta=c(1,2,3), lambda=rep(.1,4)), model=FALSE)
+@ 
+
+If the $\lambda$ is not provided, then it is estimated for the given
+$\theta$. It is like calling getLambda() with $g(\theta)$ as
+"gmat". The difference is that a ``gelfit'' object is returned. It is
+particularly usefull when we estimate restricted models in which the
+number of restriction is equal to the number of coefficients. It is
+use by \textit{confint} method for the confidence interval on the mean
+(see above):
+
+<<>>=
+specTest(evalModel(muModel, theta=4), type="LR")
+@ 
+
+The problem with the \textit{evalModel} is that not much effort is
+put on adjusting the parameters of the model. Above, it says that the
+degrees of freedom is 0. It is just not an estimation method. A proper
+estimation of the above would be done with \textit{modelFit}:
+
+<<>>=
+rmuModel <- restModel(muModel, R=matrix(1,1,1), rhs=4)
+specTest(modelFit(rmuModel))
+@ 
+
+In that case \textit{modelFit} is calling \textit{evalModel}. 
+
+\section{One function to fit them all: gel4} \label{sec:gelmodels-gel4}
+
+Most users will prefer to avoid going through the steps of building a
+model and fitting it. The gel4() function build the model, fit it and
+return the ``gelfit'' object. The arguments are similar to the ones
+described above for \textit{modelFit}, \textit{gelSolve} and
+gelModel(). 
+
+\begin{itemize}  
+  \item Arguments for the model: ``g'', ``x'', ``theta0'',
+    ``gelType'',''rhoFct'', ``vcov'', ``grad'', ``vcovOptions'',
+    ``centeredVcov'', and ``data''. See gelModel() above for
+    details. The additional arguments ``cstLHS'' and ``cstRHS'' are to
+    estimate restricted models. ``chstLHS'' is passed to
+    \textit{restModel} as ``R'' and ``cstRHS'' is passed as
+    ``rhs''. The default getType is "EL", and the default ``vcov'' is
+    "MDS"
+  \item Arguments for the estimation: ``lamSlv'', ``coefSlv'',
+    ``initTheta'', ``lControl'' and ``tControl''. The default coefSlv
+    is "optim", the default lamSlv is getLambda(), and the default
+    initTheta is "gmm". See \textit{solveGel} and \textit{modelFit}
+    above for more details.
+  \item The argument ``getVcov'' is passed to \textit{modelFit} as
+    vcov. Therefore, if it is set to TRUE, the covariance matrices are
+    computed.
+\end{itemize}
+
+We can estimate the models from Section \ref{sec:gelmodels} as follows.
+
+<<>>=
+fit <- gel4(y~x1+x2, ~x2+z1+z2, data=simData, vcov="iid", gelType="EL",
+             lControl=list(algo="Wu"))  
+print(fit, model=FALSE)
+@ 
+
+To change the initial values in the linear case, we have to provide it
+and set initTheta to "theta0". 
+
+<<>>=
+fit <- gel4(y~x1+x2, ~x2+z1+z2, data=simData, vcov="iid", gelType="EL",
+             lControl=list(algo="Wu"), theta0=c(1,1,0), initTheta="theta0")  
+coef(fit)
+@ 
+
+To estimate the model with the restiction $x1=x2$, we set $cstLHS$ as
+$R$ in the \textit{restModel} method:
+
+<<>>=
+fit <- gel4(y~x1+x2, ~x2+z1+z2, data=simData, vcov="iid", gelType="EL",
+             lControl=list(algo="Wu"), cstLHS="x2=x1")
+print(fit, model=FALSE)
 @ 
 
 
+For the formula type, a named theta0 is required for the same reason
+it is required in gelModel(). The names are used to locate the
+coefficients in the formulas.
+
+
+<<>>=
+theta0=c(mu=1,sig=1)
+x <- simData$x1
+dat <- data.frame(x=x, x2=x^2, x3=x^3, x4=x^4)
+gform <- list(x~mu,
+              x2~mu^2+sig, 
+              x3~mu^3+3*mu*sig,
+              x4~mu^4+6*mu^2*sig+3*sig^2)
+fit <- gel4(g=gform, gelType="EEL", theta0=theta0, vcov="MDS", data=dat)
+print(fit, model=FALSE)
+@ 
+
+For the function type, theta0 is required because the moment function
+is evaluated when the model is created. It is also the starting value
+if initTheta is set to "theta0". the argument x must be provided,
+because it is the second argument of the moment function
+
+<<>>=  
+fct <- function(theta, x) 
+   cbind(x-theta[1], (x-theta[1])^2-theta[2],
+          (x-theta[1])^3, (x-theta[1])^4-3*theta[2]^2)
+dfct <- function(theta, x)
+    {
+        m1 <- mean(x-theta[1])
+        m2 <- mean((x-theta[1])^2)
+        m3 <- mean((x-theta[1])^3)
+        matrix(c(-1, -2*m1, -3*m2, -4*m3, 
+                 0, -1, 0, -6*theta[2]), 4, 2)
+    }
+fit <- gel4(g=fct, x=simData$x3, theta0=c(1,1), grad=dfct, vcov="iid", gelType="ET")
+print(fit, model=FALSE)
+@ 
+
+The last type is non-linear models, which requires a named theta0 as
+for the formula type. 
+  
+<<>>= 
+theta0=c(b0=1, b1=0, b2=0)
+gform <- y~exp(b0+b1*x1+b2*x2)
+fit <- gel4(gform, ~z1+z2+z3+x2, theta0=theta0, vcov="MDS", data=simData,
+                 gelType="HD")
+print(fit, model=FALSE)
+@
+
+\section{GEL confidence intervals for the mean}
+
+The method \textit{confint} can also be used to construct confidence
+intervals for the mean, ot confidence region for two means. The first
+method is for ``numeric'' objects:
+
+<<>>=
+x2 <- simData$x2
+confint(x2, gelType="EL")
+@
+
+Which can also be done using the method for ``data.frame'':
+
+<<>>=
+confint(simData, "x2", gelType="EL")
+@ 
+
+The arguments ``level'', ``fact'' and ``type'' are as for the method
+with ``gelfit'' signature. The ``parm'' is only used with
+``data.frame'' in which case, it is used to select one or two
+columns. The argument ``vcov'' is used to specify the type of data is
+stored in the object. The options are ``iid'', the default, or ``HAC''
+for weakly dependent processes.  
+
+For ``data.frame'' and two variables, an object of class ``mconfint''
+is created. The argument ``n'' is the number of lines to use to
+construct the region. The number of equally spaced points around the
+region is $2(n+2)$ because a vertical and horizontal lines are
+added. The arguments ``cores'' is for the number of cores to use with
+mclapply(). For Windows operating systems, it is set to 1. The
+following shows how to use the \textit{print} and \textit{plot}
+methods for that class. In the following, the Wald region is computed
+instead, to avoid having a vignette that takes to much time to compile.
+
+<<>>=
+res <- confint(simData, c("x2","y"))
+res
+@ 
+
+\begin{center}
+\begin{minipage}{.7\textwidth}
+<<fig.height=5>>=
+plot(res, pch=20, bg=2, col=rainbow(7, alpha=.3)[3])
+@ 
+\end{minipage}
+\end{center}
+
+The arguments ``main'', ``xlab'' ``ylab'', ``pch'' and ``bg'' are
+passed to plot.default(), and all other arguments are passed to
+polygon().
 
 \bibliography{empir}
 \pagebreak
 \Large{\textbf{Appendix}}
 \appendix
 \section{Some extra codes}
+The following \textit{extract} is used with the ``texreg'' package of
+\cite{leifeld13} to produce nice latex tables.
+
+<<extract, eval=FALSE>>=
+@ 
+
+Here is an example
+
+<<results='asis'>>=
+fit1 <- gel4(y~x1, ~x2+x3+x4, data=simData)
+fit2 <- gel4(y~x1+x2, ~x2+x3+x4, data=simData)
+texreg(list(fit1,fit2), digits=4)
+@ 
+
 
 \end{document} 
 
